2006-04-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Do not depend on Xfce 4.2.2, as 4.2.1 will also do.
	* configure.in.in: Solaris has MD5 functions in libmd5.
	* exo/exo-toolbars-editor-dialog.c
	  (exo_toolbars_editor_dialog_add_toolbar): Fix format warning.
	* exo/exo-xsession-client.c(exo_xsession_client_set_group): Use
	  memcpy() instead of bcopy().
	* docs/reference/exo-open.xml: Fix typo.

2006-03-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_release_event): Use button
	  release to easily alter the selection even if all visible rows are
	  selected in possible preparation for a drag operation.

2006-03-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Implement "Right Arrow Keyboard Navigation" for
	  ExoIconView, as requested by Jannis. Bug #1623.

2006-03-21	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Do not
	  mess up with double click events.

2006-03-18	Benedikt Meurer <benny@xfce.org>

	* THANKS: Add translator credits for Andrey Fedoseev
	  <andrey.fedoseev@gmail.com>.

2006-03-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Allow to
	  alter selection using Ctrl+button/Shift+button.

2006-03-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Use a simple 
	  optimization here.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* exo-helper/helpers/sylpheed-claws.desktop.in,
	  exo-helper/helpers/Makefile.am: Add Sylpheed Claws as MailReader to
	  the helper list. Thanks to Bernhard Walle <bernhard.walle@gmx.de>.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_row_deleted): Use next/prev item (if
	  any) as cursor/anchor when a row is deleted from the model. Else if
	  the deleted item was the last item, reset anchor/cursor.

2006-03-08	Benedikt Meurer <benny@xfce.org>
