@@ -42,3 +42,11 @@ Joao Pedrosa <joaopedrosa@gmail.com>
 
 Andrey Fedoseev <andrey.fedoseev@gmail.com>
  * ru translations
+
+
+Translators (sorted by name):
+-----------------------------
+
+Matt McClinch <mattmcclinch@gmail.com>
+ * ExoIconView patches
+
