@@ -1,3 +1,9 @@
+2006-04-09	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_select_all_between), THANKS:
+	  Apply patch to improve shift-selection in the icon view, from
+	  Matt McClinch <mattmcclinch@gmail.com>.
+
 2006-04-05	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Do not depend on Xfce 4.2.2, as 4.2.1 will also do.
